Réorgnise les SI Typos et bémols

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -67,7 +67,7 @@ Finally we show that the wavelength is selected by a purely viscous mechanism co
 
 \section*{Dynamics of the wrinkling process}
 
-To form a gel we start from an aqueous dispersion of caseins and GDL. GDL slowly acidify the medium and triggers gelation of the caseins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, this yoghurt-forming suspension is injected into an home-made optical cell, as sketched in Figure~\ref{fig:dynamics}a. The cell is sealed an no external stimulus is applied during gelation or pattern formation. Both top and bottom walls are coated by acrylamide brushes, effectively turning off the casein adhesion so that the gel is only anchored to the remaining four sides of the cell.
+To form a gel we start from an aqueous dispersion of caseins and glucono-$\delta$-lactone (GDL). GDL slowly acidify the medium and triggers gelation of the caseins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, this yoghurt-forming suspension is injected into an home-made optical cell, as sketched in Figure~\ref{fig:dynamics}a. The cell is sealed and no external stimulus is applied during gelation or pattern formation. Both top and bottom walls are coated by acrylamide brushes, effectively turning off the casein adhesion so that the gel is only anchored to the remaining four sides of the cell.
 
 The dynamics of the pattern formation is followed by light transmission microscopy and confocal microscopy, see Methods. As shown in Figure~\ref{fig:dynamics}b and Supplementary Video~\ref{vid:transmitted}, we observe the spontaneous formation of a first pattern that appear with a characteristic wavelength $\lambda\ll L$. The 2D shape and size of this primary pattern are set as soon as the pattern forms and do not evolve in time. However inside the primary pattern a secondary pattern emerges, inside which a ternary forms. At each step of this Russian dolls-like cascade, the wavelength is divided by two, as show in Supplementary Figure~\ref{fig:generations}.
 
@@ -78,7 +78,7 @@ Extracting the top and bottom surface of the gel phase allows for quantitative m
 The primary, secondary and tertiary patterns follow the same path: the birth of an instability of wavelength $\lambda$ of growing amplitude $A(t)$ until saturation, see Figure~\ref{fig:sideview}a. Throughout the whole process, $\lambda$ remains constant. This path is dynamic in essence. In Figure~\ref{fig:sideview}d, we thus report the velocity $v(t)$ of the wrinkles as it develops in the $z$-direction, see Supplementary Methods for the definition. We observe that the velocity peaks at different times corresponding to the syn\ae{}resis and the respective growths of the primary, secondary and tertiary patterns. We associate each growth with a characteristic time $\tau = A_\text{max}/v_\text{max}$. For example, in the present case the $\tau$ corresponding to the primary pattern is $\SI{123}{\second}$.
 
 
-We do not observe coarsening of the patterns as in~\cite{Yoo2003}. We believe the wrinkling pattern is stable against coarsening because of the bending rigidity of the gel~\cite{LeGoff2014}. Indeed when the amplitude saturates the gel flattens against the walls and create sharp edges. To accommodate those sharp edges with finite bending rigidity, the flat part of the gel actually ripples, see Supplementary Figure~\ref{fig:ripples}. The ripples created by opposite sides of a same flat patch interfere, creating barriers against coarsening.
+XXX formulation XXX We do not observe coarsening of the patterns as in~\cite{Yoo2003}. We believe the wrinkling pattern is stable against coarsening because of the bending rigidity of the gel~\cite{LeGoff2014}. Indeed when the amplitude saturates the gel flattens against the walls and create sharp edges. To accommodate those sharp edges with finite bending rigidity, the flat part of the gel actually ripples, see Supplementary Figure~\ref{fig:ripples}. The ripples created by opposite sides of a same flat patch interfere, creating barriers against coarsening.
 
 
 \begin{figure}
@@ -87,16 +87,16 @@ We do not observe coarsening of the patterns as in~\cite{Yoo2003}. We believe th
 	\label{fig:sideview}
 \end{figure}
 
-Based those observations, we examine possible scenarios upon shrinking and swelling of the gel. As the gel forms it expels the solvent and detaches from top and bottom wall, see Figure~\ref{fig:dilation}b and c. For the swelling back we consider three options: 
+Based on those observations, we examine possible scenarios upon shrinking and swelling of the gel. As the gel forms it expels the solvent and detaches from top and bottom wall, see Figure~\ref{fig:dilation}b and c. For the swelling back we consider three options: 
 
 \noindent
 (i) In Figure~\ref{fig:dilation}d, the swelling back is reversible, only releasing tensile stresses accumulated during shrinking, and the layer remains flat, as expected from chemical gels~\cite{Kim2010}. Since this case is not observed it means that in this physical gel, syn\ae{}resis and swelling processes foster irreversible stress dissipation and structural changes. In the following, we will therefore consider that the shrunk state is stress-free. 
 
 \noindent
-(ii) In Figure~\ref{fig:dilation}e, we assume that nothing hinders the buckling of the gel film. This simple buckling situation leads to a primary pattern composed of a single bump of size $L$. As the bump amplitude grows larger saturates on the top and bottom wall, buckling of smaller wavelength may appear, as observed by~\cite{Roman1999}. That is not what we observe since our primary wavelength $\lambda$ is much smaller that $L$.
+(ii) In Figure~\ref{fig:dilation}e, we assume that nothing hinders the buckling of the gel film. This simple buckling situation leads to a primary pattern composed of a single bump of size $L$. As the bump amplitude grows larger saturates on the top and bottom wall, buckling of smaller wavelength may appear, as observed by~\cite{Roman1999}. That is also not what we observe since our primary wavelength $\lambda$ is much smaller that $L$.
 
 \noindent
-(iii) We are left with the case of Figure~\ref{fig:dilation}f where a wrinkling pattern emerges spontaneously with a wavelength $\lambda\ll L$ selected before saturation on the top and bottom wall. To obtain such an instability, one must balance the bending rigidity of the gel film with a transverse load $\sigma_{\perp}$ that hinders buckling on large wavelengths. The transverse load could be gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, however we confirm that it plays no significant role by successfully repeating the wrinkling pattern in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely. Furthermore, the transverse load cannot be adhesion~\cite{Vella2009a} since the film is not adhering to the top and bottom walls. Influence of the side boundaries~\cite{Vandeparre2011a, Li2013} is also excluded since the wavelength of the pattern is uniform throughout the sample. Finally as the four side boundaries remain fixed $\sigma_{\perp}$ cannot come from the resistance to uniaxial stretching~\cite{Cerda2003}.
+(iii) We are left with the case of Figure~\ref{fig:dilation}f where a wrinkling pattern emerges spontaneously with a wavelength $\lambda\ll L$ selected before saturation on the top and bottom walls. To obtain such an instability, one must balance the bending rigidity of the gel film with a transverse load $\sigma_{\perp}$ that hinders buckling on large wavelengths. The transverse load could be gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, however we confirm that it plays no significant role by successfully repeating the wrinkling pattern in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely. Furthermore, the transverse load cannot be adhesion~\cite{Vella2009a} since the film is not adhering to the top and bottom walls. Influence of the side boundaries~\cite{Vandeparre2011a, Li2013} is also excluded since the wavelength of the pattern is uniform throughout the sample. Finally as the four side boundaries remain fixed $\sigma_{\perp}$ cannot come from the resistance to uniaxial stretching~\cite{Cerda2003}. XXX conclure plus clairement XXX
 
 Now, two points remain unclear: what triggers the the spontaneous syn\ae{}resis and swelling back processes? And what is the nature of $\sigma_{\perp}$ responsible for the selection of the primary wavelength?
 
@@ -158,6 +158,8 @@ The determination of the characteristic length $\lambda$ of a wrinkling pattern 
 
 This framework has been successfully applied to situations where $\sigma_{\perp}$ comes from the resistance of an elastic substrate ~\cite{Gough1940, Bijlaard1946}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Furthermore, equation~(\ref{eq:lstar}) remains valid even when $\sigma_{\perp}$ comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}.
 
+XXX repetition entre paragraphe d'avant et d'après XXX
+
 In our situation we now have to determine $\sigma_\perp$. We have already excluded uniaxial stretching~\cite{Cerda2003}, gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, boundaries~\cite{Vandeparre2011a, Li2013} and adhesion~\cite{Vella2009a}. Two possible candidates remains for the transverse load $\sigma_\perp$: the porous flow through the gel or the viscous flows in the surrounding solvent layers.
 
 
@@ -198,17 +200,17 @@ For a typical gel sheet, the buoyancy after syn\ae{}resis is estimated from the 
 
 Darcy and Poiseuille models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them, see Supplementary Methods about such measurements. As summarised in Supplementary Table~\ref{tab:data} we systematically vary (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacts the gel stiffness, permeability and $\tau$. Finally, the only parameter that we have no control upon is the initial altitude $H$ of the gel before wrinkling that varies randomly. 
 
-For each experiment we measure independently $\lambda$ and all the parameter that go into the expressions of $\lambda_D$, Equation~(\ref{eq:prefDarcy}) and $\lambda_P$, Equation~(\ref{eq:prefPoiseuille}). $\lambda$ is measured by optical microscopy; $e$, $h$, $H_1$, $H_2$, $\tau$ are measured by confocal microscopy; $\alpha$ is measured via capillary experiment and $B$ by rheology, see Methods and Supplementary methods.
+For each experiment we measure independently $\lambda$ and all the parameters that go into the expressions of $\lambda_D$, Equation~(\ref{eq:prefDarcy}) and $\lambda_P$, Equation~(\ref{eq:prefPoiseuille}). $\lambda$ is measured by optical microscopy; $e$, $h$, $H_1$, $H_2$, $\tau$ are measured by confocal microscopy; $\alpha$ is measured via capillary experiment and $B$ by rheology, see Methods and Supplementary methods.
 
 
 The beauty of this approach is that it is not only valid to model the primary wavelength, but that it describes also the growth of the secondary pattern. Although the wavelength $\lambda_2$ of the secondary pattern is fully determined by the primary pattern $\lambda_2 = \lambda_1/2$, Figure~\ref{fig:dynamics} and Supplementary Figure~\ref{fig:generations}, the secondary pattern has its own dynamics with its own characteristic time $\tau_2\neq\tau_1$. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Therefore, we are able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones.
 
 
-Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and b we have plotted the measure wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the predictions are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity albeit with a prefactor. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Methods. The results of this mixed model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ for the whole $H/H^*$ range.
+Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and b we have plotted the measure wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the predictions are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity albeit with a prefactor XXX Thomas dit pas clair XXX. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Methods. The results of this mixed model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ for the whole $H/H^*$ range.
 
 \section*{Conclusion}
 
-In conclusion we have taken advantage of the properties of the casein protein to engineer and study the wrinkling of a porous confined biogel. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of continuous acidification. Together with carefully controlled adhesion of the gels to the boundaries, this route to form permeable biogels is the key to produce an original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constraints exerted on the gel and predicts the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH-induced charge stabilisation/destabilisation, should be generalisable to different kinds of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}.
+In conclusion we have taken advantage of the properties of the casein protein to engineer and study the wrinkling of a porous confined biogel. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of continuous acidification. Together with carefully controlled adhesion of the gels to the boundaries, this route to form permeable biogels is the key to produce an original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constraints exerted on the gel and predicts the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH-induced charge stabilisation/destabilisation, should be generalisable to different kinds of proteins. As such it could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}. XXX texture food XXX
 
 
 %role of gravity
@@ -280,7 +282,21 @@ To measure the wrinkle wavelength $\lambda$, we use large field pictures of the 
 
 Figure~\ref{fig:generations} shows Fourier spectra of binarised altitudes at different times. When only the first generation pattern is present a peak clearly indicates the dominant mode. When the secondary pattern has appeared, the dominant wavelength is halved and the peak much weaker. This allows us to use the secondary pattern is our analysis by setting their wavelength to half of the primary wavelength. Further generations do not seem to appear simultaneously and the corresponding peaks are weak and broad.
 
+\subsection*{Confocal images processing}
 
+At 10x magnification and depending on cell thickness, we acquire stacks of 20 to 50 images spaced by \SI{6.69}{\micro\metre} (Nyquist sampling). Each confocal slice is $(\SI{256}{px})^2$ with pixels of \SI{4.97}{\micro\metre}. At such low resolution details of the gel microstructure are undistinguishable as $\xi$ is smaller than the pixel size for all compositions and the gel appears as a continuous medium.
+
+We first de-noise each plane by a short-range Gaussian blur ($\sigma=\SI{2}{px}\ll\lambda$). Then, for each $(x,y)$, we focus on the z-dependent intensity profile $I(z)$. We define the position of the top surface of the gel $z_\text{top}$ as the point where $I(z)$ first crosses half of its maximum value over the given vertical line. Since this criterion is local, we do not need to correct for background intensity variation. In this way we obtain $z_\text{top}(x,y)$ with subpixel resolution ($\pm\SI{0.1}{px}=\SI{0.67}{\micro\metre}$), and $z_\text{bottom}(x,y)$ in a symmetrical way.
+
+From these data, we obtain for each stack the volume and thickness of the gel phase, area and peak-to-peak amplitude of the mid surface. Velocity is obtained by time differentiation. Once the instability has saturated on the top and bottom walls of the cell, peaks in the histograms of $z_\text{top}$ and $z_\text{bottom}$ yield the measure of the positions of both walls, thus of the cell thickness $e$ and retrospectively of $H_1$ and $H_2$.
+
+\subsection*{Characteristic time measurements}
+
+In most of our samples it is possible to measure directly the peak-to-peak amplitude $A(t)$ from our confocal measurements. However when the wavelength is too large compared to the field of view, this approach breaks down since we cannot observe both the highest and lowest points of the surface. Even when valid, such a local measurement is rather noisy and we prefer to focus on the measure of the vertical velocity $v$ of the gel that can be integrated over the whole field of view:
+\begin{equation}
+v(t) = \frac{\int \left|\frac{dz}{dt}\right| dxdy}{\int dxdy},
+\end{equation}
+where $z(x,y,t)$ is the altitude of the mid surface of the gel.
 
 \subsection*{Fraction of free casein as a function of pH}
 
@@ -340,21 +356,9 @@ By fitting $z(t)-z_\infty$ to an exponential, see Supplementary Figure~\ref{fig:
 
 
 
-\subsection*{Confocal images processing}
 
-At 10x magnification and depending on cell thickness, we acquire stacks of 20 to 50 images spaced by \SI{6.69}{\micro\metre} (Nyquist sampling). Each confocal slice is $(\SI{256}{px})^2$ with pixels of \SI{4.97}{\micro\metre}. At such low resolution details of the gel microstructure are undistinguishable as $\xi$ is smaller than the pixel size for all compositions and the gel appears as a continuous medium.
 
-We first de-noise each plane by a short-range Gaussian blur ($\sigma=\SI{2}{px}\ll\lambda$). Then, for each $(x,y)$, we focus on the z-dependent intensity profile $I(z)$. We define the position of the top surface of the gel $z_\text{top}$ as the point where $I(z)$ first crosses half of its maximum value over the given vertical line. Since this criterion is local, we do not need to correct for background intensity variation. In this way we obtain $z_\text{top}(x,y)$ with subpixel resolution ($\pm\SI{0.1}{px}=\SI{0.67}{\micro\metre}$), and $z_\text{bottom}(x,y)$ in a symmetrical way.
 
-From these data, we obtain for each stack the volume and thickness of the gel phase, area and peak-to-peak amplitude of the mid surface. Velocity is obtained by time differentiation. Once the instability has saturated on the top and bottom walls of the cell, peaks in the histograms of $z_\text{top}$ and $z_\text{bottom}$ yield the measure of the positions of both walls, thus of the cell thickness $e$ and retrospectively of $H_1$ and $H_2$.
-
-\subsection*{Characteristic time measurements}
-
-In most of our samples it is possible to measure directly the peak-to-peak amplitude $A(t)$ from our confocal measurements. However when the wavelength is too large compared to the field of view, this approach breaks down since we cannot observe both the highest and lowest points of the surface. Even when valid, such a local measurement is rather noisy and we prefer to focus on the measure of the vertical velocity $v$ of the gel that can be integrated over the whole field of view:
-\begin{equation}
-v(t) = \frac{\int \left|\frac{dz}{dt}\right| dxdy}{\int dxdy},
-\end{equation}
-where $z(x,y,t)$ is the altitude of the mid surface of the gel.
 
 
 
