Abstract reprenant les nouveaux objectifs plutôt que de se concentrer sur la caséine. Ne parle plus de la différence de préfacteur

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -29,7 +29,11 @@ amsmath,amssymb,prl]{revtex4-1}
 \affiliation{Universit\'e de Lyon, Laboratoire de Physique, \'Ecole Normale Sup\'erieure de Lyon, CNRS UMR 5672, 46 All\'ee d'Italie, 69364 Lyon cedex 07, France}
 
 \begin{abstract}
-The slow acidification of caseins, a family of milk proteins, is well known to result in the formation of gels, e.g. yoghurt. Less known is the partial redissolution of the gel at even lower pH. Here, using caseins as pH-responsive building blocks and the acidulent glucono-$\delta$-lactone, we design a model biogel film that spontaneously wrinkles in cascade, provided non-adhesive confinement. Using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that, during continuous acidification, the gel first shrinks and then swells, inducing wrinkling. Taking into account both Darcy flow through the gel and Poiseuille flow in the surrounding solvent, we develop a model that predicts correctly the wrinkling wavelength. Our results should be universal for acid-induced protein gels as they are based on pH-induced charge stabilisation/destabilisation. As such our results could set a benchmark to gain fundamental insights into wrinkled biological tissues, to texture food or to design surfaces for optical purposes.
+Confined thin surfaces may wrinkle due the growth of an excess of material. Usually the wavelength is set by elasticity or gravity, but here we explore new selection mechanisms based on hydrodynamics.
+First, inspired by yoghurt-making processes, we use caseins, a family of milk proteins, as pH-responsive building blocks and the acidulent glucono-$\delta$-lactone, to design a porous biogel film immersed in a confined buoyancy-matched viscous medium.
+Provided specific boundary conditions the biogel film spontaneously wrinkles in cascade.
+Second, using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that, during continuous acidification, the gel first shrinks and then swells, inducing wrinkling. 
+Third, taking into account both Darcy flow through the gel and Poiseuille flow in the surrounding solvent, we develop a model that predicts correctly the wrinkling wavelength. Our results should be universal for acid-induced protein gels as they are based on pH-induced charge stabilisation/destabilisation. As such our results could set a benchmark to gain fundamental insights into wrinkled biological tissues, to texture food or to design surfaces for optical purposes.
 \end{abstract}
 
 \maketitle
@@ -209,11 +213,11 @@ For each experiment we measure independently $\lambda$ and all the parameters th
 The beauty of this approach is that it is not only valid to model the primary wavelength, but that it describes also the growth of the secondary pattern. Although the wavelength $\lambda_2$ of the secondary pattern is fully determined by the primary pattern $\lambda_2 = \lambda_1/2$, Figure~\ref{fig:dynamics} and Supplementary Figure~\ref{fig:generations}, the secondary pattern has its own dynamics with its own characteristic time $\tau_2\neq\tau_1$. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Therefore, we are able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones.
 
 
-Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and \ref{fig:DarcyPoiseuille}b we have plotted the measured wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the predictions are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity albeit with a prefactor XXX Thomas dit pas clair XXX. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data correctly. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Methods. The results of this mixed model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ over the whole $H/H^*$ range.
+Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and \ref{fig:DarcyPoiseuille}b we have plotted the measured wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the predictions are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data correctly. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Methods. The results of this mixed model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ over the whole $H/H^*$ range.
 
 \section*{Conclusion}
 
-To conclude we have taken advantage of the properties of the casein protein to engineer and study the wrinkling of a porous confined biogel. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of continuous acidification. Together with carefully controlled adhesion of the gels to the boundaries, this route to form permeable biogels is the key to produce an original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constraints exerted on the gel and predicts the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH-induced charge stabilisation/destabilisation, should be generalisable to different kinds of proteins. As such it could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in soft optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}. XXX texture food XXX
+To conclude we have taken advantage of the properties of the casein protein to engineer and study the wrinkling of a porous confined biogel. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of continuous acidification. Together with carefully controlled adhesion of the gels to the boundaries, this route to form permeable biogels is the key to produce an original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constraints exerted on the gel and predicts the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH-induced charge stabilisation/destabilisation, should be generalisable to different kinds of proteins. As such it could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in soft optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, food texturing~\cite{Mezzenga2005} XXXGibeau Faraday discussionXXX and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}.
 
 
 %role of gravity
