--- a/fig_plis/Yaourt.bib
+++ b/fig_plis/Yaourt.bib
@@ -762,6 +762,26 @@
   Url                      = {http://xlink.rsc.org/?DOI=b516741h}
 }
 
+@Article{Gibaud2012a,
+  Title                    = {{New routes to food gels and glasses}},
+  Author                   = {Gibaud, Thomas and Mahmoudi, Najet and Oberdisse, Julian and Lindner, Peter and Pedersen, Jan Skov and Oliveira, Cristiano L. P. and Stradner, Anna and Schurtenberger, Peter},
+  Journal                  = {Faraday Discuss.},
+  Year                     = {2012},
+
+  Month                    = sep,
+  Pages                    = {267},
+  Volume                   = {158},
+
+  Abstract                 = {We describe the possibility to create solid-like protein samples whose structural and mechanical properties can be varied and tailored over an extremely large range in a very controlled way through an arrested spinodal decomposition process. We use aqueous lysozyme solutions as a model globular protein system. A combination of video microscopy, small-angle neutron and X-ray scattering and reverse Monte Carlo modeling is used to characterize the structure of the bicontinuous network with two coexisting phases of a dilute protein solution and a glassy or arrested dense protein backbone at all relevant length scales. Rheological measurements are then used to determine the complex mechanical response of these protein gels as a function of protein concentration and quench temperature. While in particular the origin of the dependence of the mechanical properties on quench depth and concentration is not well understood currently, it seems ultimately connected to the particular bicontinuous structure of the arrested spinodal network created by the interplay between the early stage of a spinodal decomposition and the position of the glass line. We then generalize this behavior and discuss how this could open up new routes to prepare gel-like food systems with adjustable structural and mechanical properties. We present results from a first feasibility study where we use a depletion interaction caused by the addition of small non-adsorbing polymers to suspensions of casein micelles in order to create food gels with tunable structural and mechanical properties through an arrested spinodal decomposition process.},
+  Doi                      = {10.1039/c2fd20048a},
+  ISSN                     = {1359-6640},
+  Language                 = {en},
+  Owner                    = {mathieu},
+  Publisher                = {The Royal Society of Chemistry},
+  Timestamp                = {2015.05.15},
+  Url                      = {http://pubs.rsc.org/en/content/articlehtml/2012/fd/c2fd20048a}
+}
+
 @Article{Gopinath2011,
   Title                    = {{Elastohydrodynamics of wet bristles, carpets and brushes}},
   Author                   = {Gopinath, a. and Mahadevan, L.},
