--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -217,7 +217,7 @@ Despite changing the gel properties and the cell geometry we always observe wrin
 
 \section*{Conclusion}
 
-To conclude we have taken advantage of the properties of the casein protein to engineer and study the wrinkling of a porous confined biogel. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of continuous acidification. Together with carefully controlled adhesion of the gels to the boundaries, this route to form permeable biogels is the key to produce an original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constraints exerted on the gel and predicts the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH-induced charge stabilisation/destabilisation, should be generalisable to different kinds of proteins. As such it could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in soft optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, food texturing~\cite{Mezzenga2005} XXXGibeau Faraday discussionXXX and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}.
+To conclude we have taken advantage of the properties of the casein protein to engineer and study the wrinkling of a porous confined biogel. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of continuous acidification. Together with carefully controlled adhesion of the gels to the boundaries, this route to form permeable biogels is the key to produce an original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constraints exerted on the gel and predicts the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH-induced charge stabilisation/destabilisation, should be generalisable to different kinds of proteins. As such it could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in soft optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, food texturing~\cite{Mezzenga2005,Gibaud2012a} and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}.
 
 
 %role of gravity
